--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "clax": "^0.0.6",
+    "framer-motion": "^8.2.4",
     "react": "^18.2.0",
     "react-compare-image": "^3.3.0",
     "react-dom": "^18.2.0",
