--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-compare-image": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.5",
     "typescript": "^4.4.2",
