--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "clax": "^0.0.6",
+    "clsx": "^1.2.1",
     "framer-motion": "^8.2.4",
     "react": "^18.2.0",
     "react-compare-image": "^3.3.0",
